fix logo overlap issue

--- a/ckanext/mx/fanstatic/styles/less/mx.less
+++ b/ckanext/mx/fanstatic/styles/less/mx.less
@@ -290,7 +290,7 @@ body {
 }
 
 .masthead,
-.masthead > .container {
+.masthead > .container .header-image {
 	background-color:@dark;
 }
 .masthead {
@@ -312,11 +312,13 @@ body {
 	padding-top:46px;
 }
 .masthead hgroup h2 {
-  bottom: -43px;
+	position:static;
+	padding-top:27px;
   font-size: 14px;
   font-weight: 200;
 	font-style:italic;
 	color:@light;
+	float:none;
 }
 .masthead .content {
 	top:0;
@@ -723,4 +725,12 @@ body,
 }
 .main.homepage {
   border-top: 2px solid @dark;
+}
+
+
+/* Media Queries */
+@media all and (max-width: 1071px) {
+  .masthead > .container .header-image {
+		margin-left:70px;
+	}
 }
